# edo

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
data/: daslab.cfg  r89f.list
src/: Makefile.am  Makefile.in  edo.cpp  edo.ggo  edo_cmdl.c  edo_cmdl.h  edo_fold.cpp  edo_fold.h
